--- a/SmartWatch_under6.html
+++ b/SmartWatch_under6.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUGGESTMEE : Best Daily Use Laptops</title>
+    <title>SUGGESTMEE : Best Gamming Laptops</title>
+
     <!---icon image-->
     <link
       rel="icon"
@@ -12,34 +13,34 @@
       href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.ico"
     />
 
-    <!----Meta-------->
+    <!----META----------->
     <meta
       name="keywords"
       content="best laptops,2022,programming laptops,gaming laptops,basic purpose laptops,core i5,i3,i7,Ram,USB Type-C,Higher-Resolution Screens,OLED Displays,Nvidia Graphics,display full hd, daily use, Laptops, Dell XPS Alienware,Lenovo ThinkPad X1 Carbon Gen 9 (2022),HP Spectre, Dell Inspiron, Dell Precision, Lenovo IdeaPad"
     />
     <meta
       name="description"
-      content="the best budget laptops which are reviewed and tested by experts to help you choose ideal system"
+      content="The best gamming with Power, excellent design,portability."
     />
     <meta name="author" content="Suggestmee" />
     <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- Open Graph -->
     <meta property="fb:app_id" content="106460971998723" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://suggestmee.github.io/basic_use_laptops.html"
+      content="https://suggestmee.github.io/gamming_laptops.html"
     />
-    <meta property="og:title" content="suggestmee : Daily Use Laptops" />
+    <meta property="og:title" content="suggestmee : Best Gamming Laptops" />
     <meta property="og:description" content="Helps to choose Best from Rest" />
     <meta
       property="og:image"
       itemprop="image"
-      content="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/facebook/display-1.jpg"
+      content="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/facebook/display-3.jpg"
     />
-    <!---Css Style-->
-    <link rel="stylesheet" href="./style.css" />
+    <!-----CSS Style-->
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -57,13 +58,13 @@
         <nav class="suggestme-nav">
           <ul id="menuItems">
             <li><a href="/">HOME</a></li>
-            <li>
+            <!--<li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
                 target="_blank"
                 >ABOUT</a
               >
-            </li>
+            </li>--->
             <li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
@@ -109,20 +110,24 @@
           />
         </div>
 
-        <hr style="margin: 30px 0" />
+        <hr class="desktop-separator" />
       </div>
     </header>
 
     <!-- -----single products details 1 ----- -->
 
-    <div class="small-container single-details">
+    <!----<div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I3/gallery-1.jpg" width="100%" id="productImg" />
+          <img
+            src="./images/mobile/gallery-9.jpg"
+            width="100%"
+            id="productImg"
+          />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-1.jpg"
+                src="./images/mobile/gallery-9.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -130,7 +135,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-2.jpg"
+                src="./images/mobile/gallery-10.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -138,7 +143,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-3.jpg"
+                src="./images/mobile/gallery-11.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -146,7 +151,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-4.jpg"
+                src="./images/mobile/gallery-12.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -155,152 +160,186 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>HP Laptop 15s</h1>
+          <h1>realme GT 2 Pro</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor :</b> 11th Generation Intel® Core™ i3 processor</p>
-          <p><b>Operating System :</b> Windows 11 Home</p>
-          <p><b>Graphics :</b> Intel UHD Graphics</p>
-          <p><b>RAM : </b> 8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
-          <p><b>Storage : </b> 512 GB PCIe® NVMe™ M.2 SSD</p>
-          <p><b>Display :</b> 39.62 cm (15.6) FHD</p>
-          <p><b>MRP : </b> ₹43,249</p>
+          <p><b>Processor :</b> Snapdragon™ 8 Gen 1</p>
+          <p><b>Camera</b> 50MP + 50MP</p>
+          <p><b>Battery :</b> Massive 5000mAh Battery</p>
+          <p><b>Display :</b> 2K Super Reality Display</p>
+          <p><b>Storage :</b> 128GB / 256GB</p>
+          <p><b>RAM :</b> 8GB / 12GB</p>
+          <p><b>MRP :</b> 49,999</p>
 
           <a
-            href="https://www.hp.com/in-en/shop/hp-laptop-15s-fq2627tu-536c3pa.html"
+            href="https://buy.realme.com/in/goods/528"
             class="btn"
             target="_blank"
-            >Buy From HP Store</a
+            >Buy From Realme Store</a
           >
         </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Advantage</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Disadvantage</div>
+        </div>
+      </div>
+    </div>---->
     <!-- -----single products details 2 ----- -->
 
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I3/gallery-5.jpg" width="100%" id="productImg1" />
+          <img
+            src="./images/smartwatch/gallery-5.jpg"
+            width="100%"
+            id="productImg2"
+          />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-5.jpg"
+                src="./images/smartwatch/gallery-5.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-6.jpg"
+                src="./images/smartwatch/gallery-6.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-7.jpg"
+                src="./images/smartwatch/gallery-7.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-8.jpg"
+                src="./images/smartwatch/gallery-8.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
-          <h1>Lenovo IdeaPad Slim 3i</h1>
+          <h1>Noise ColorFit Pro 3</h1>
           <h3>Product Details</h3>
           <br />
-          <p>
-            <b>Processor :</b> 11th Generation Intel® Core™ i3-1115G4 Processor
-          </p>
-          <p><b>Operating System :</b> Windows 11 Home 64</p>
-          <p><b>Graphics :</b> Integrated Intel® UHD Graphics</p>
-          <p><b>RAM :</b>4 GB + 4 GB Soldered DDR4 2666MHz</p>
-          <p><b>Storage :</b> 256 GB M.2 2242 SSD</p>
-          <p><b>Display :</b> 35.56cms (14) FHD (1920 x 1080), IPS</p>
-          <p><b>MRP :</b> ₹36,990</p>
+          <p><b>Compatibility :</b> iOS 10 & + or Android 4.4 & +</p>
+          <p><b>Battery Life :</b> 5 Days Typical Usage</p>
+          <p><b>Durability :</b> 5 ATM Water Resistant</p>
+          <p><b>Storage :</b> ----</p>
+          <p><b>Display :</b> LCD display</p>
+          <p><b>MRP :</b> ₹5,999</p>
+
           <a
-            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-14ITL5/p/81X700DNIN"
+            href="https://www.gonoise.com/products/noise-colorfit-pro-3-alpha-full-touch-control-smart-watch"
             class="btn"
             target="_blank"
-            >Buy From Lenovo store</a
+            >Buy From Noise Store</a
           >
         </div>
       </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Need LED Display</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Voice Calling Feature</div>
+        </div>
+      </div>
     </div>
-
     <!-- -----single products details 3 ----- -->
 
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I3/gallery-9.jpg" width="100%" id="productImg2" />
+          <img
+            src="./images/smartwatch/gallery-9.jpg"
+            width="100%"
+            id="productImg3"
+          />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-9.jpg"
+                src="./images/smartwatch/gallery-9.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-10.jpg"
+                src="./images/smartwatch/gallery-10.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-11.jpg"
+                src="./images/smartwatch/gallery-11.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-12.jpg"
+                src="./images/smartwatch/gallery-12.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg3"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
-          <h1>Dell Vostro 3510</h1>
+          <h1>fireboltt Invincible</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor :</b> 11th Gen Intel® Core™ i3-1125G4</p>
-          <p><b>Operating System :</b> Windows 11 Home Single Language</p>
-          <p><b>Graphics</b>Intel® UHD Graphics</p>
-          <p><b>RAM :</b> 8 GB, 1 x 8 GB, DDR4, 2666 MHz</p>
-          <p><b>Storage :</b> 256 GB, M.2, PCIe NVMe, SSD</p>
-          <p><b>Display :</b> 15.6", FHD 1920x1080</p>
-          <p><b>MRP :</b> ₹41,989</p>
+          <p><b>Compatibility :</b> iOS 8.0 or + and Android 5.1 or +</p>
+          <p><b>Battery Life :</b> 7 Days Without Calling</p>
+          <p><b>Durability :</b> IP67 Water Resistant</p>
+          <p><b>Storage :</b> 8GB Memory</p>
+          <p><b>Display :</b> round Amoled display</p>
+          <p><b>MRP :</b> ₹5,999</p>
+          <!---calling,storage,outdoor--->
           <a
-            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/vostro-3510-laptop/spd/vostro-15-3510-laptop/bts-icc-d585047win8"
+            href="https://fireboltt.com/collections/smart-watches/products/invincible?variant=40944694689983"
             class="btn"
             target="_blank"
-            >Buy From Dell Store</a
+            >Buy From Fireboltt Store</a
           >
         </div>
       </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Need 5 ATM Water Resistant</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Voice Calling Feature</div>
+        </div>
+      </div>
     </div>
-    <!-- -----single products details 3 ----- -->
 
     <!-- footer -->
 
@@ -326,7 +365,6 @@
         </div>
       </div>
     </footer>
-
     <script>
       var menuItems = document.getElementById("menuItems");
       var menuIconClose = document.getElementById("menuIconClose");
@@ -364,23 +402,6 @@
       };
     </script>
     <script>
-      var productImg1 = document.getElementById("productImg1");
-      var smallImg1 = document.getElementsByClassName("smallImg1");
-
-      smallImg1[0].onclick = function () {
-        productImg1.src = smallImg1[0].src;
-      };
-      smallImg1[1].onclick = function () {
-        productImg1.src = smallImg1[1].src;
-      };
-      smallImg1[2].onclick = function () {
-        productImg1.src = smallImg1[2].src;
-      };
-      smallImg1[3].onclick = function () {
-        productImg1.src = smallImg1[3].src;
-      };
-    </script>
-    <script>
       var productImg2 = document.getElementById("productImg2");
       var smallImg2 = document.getElementsByClassName("smallImg2");
 
@@ -395,6 +416,23 @@
       };
       smallImg2[3].onclick = function () {
         productImg2.src = smallImg2[3].src;
+      };
+    </script>
+    <script>
+      var productImg3 = document.getElementById("productImg3");
+      var smallImg3 = document.getElementsByClassName("smallImg3");
+
+      smallImg3[0].onclick = function () {
+        productImg3.src = smallImg3[0].src;
+      };
+      smallImg3[1].onclick = function () {
+        productImg3.src = smallImg3[1].src;
+      };
+      smallImg3[2].onclick = function () {
+        productImg3.src = smallImg3[2].src;
+      };
+      smallImg3[3].onclick = function () {
+        productImg3.src = smallImg3[3].src;
       };
     </script>
   </body>
