--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -92,7 +92,7 @@
             target="_blank"
             ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
           /></a>
-          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+          <a href="https://www.instagram.com/suggestmee_/" target="_blank"
             ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
           /></a>
           <a href="mailto:suggestme60@gmail.com?" target="_blank"
@@ -109,7 +109,7 @@
           />
         </div>
 
-        <hr style="margin: 30px 0" />
+        <hr class="desktop-separator" />
       </div>
     </header>
 
@@ -164,7 +164,7 @@
           <p><b>RAM : </b> 8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
           <p><b>Storage : </b> 512 GB PCIe® NVMe™ M.2 SSD</p>
           <p><b>Display :</b> 39.62 cm (15.6) FHD</p>
-          <p><b>MRP : </b> 43,249</p>
+          <p><b>MRP : </b> ₹43,249</p>
 
           <a
             href="https://www.hp.com/in-en/shop/hp-laptop-15s-fq2627tu-536c3pa.html"
@@ -174,6 +174,16 @@
           >
         </div>
       </div>
+      <!----<div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Advantage</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Disadvantage</div>
+        </div>
+      </div>----->
     </div>
     <!-- -----single products details 2 ----- -->
 
@@ -228,15 +238,25 @@
           <p><b>RAM :</b>4 GB + 4 GB Soldered DDR4 2666MHz</p>
           <p><b>Storage :</b> 256 GB M.2 2242 SSD</p>
           <p><b>Display :</b> 35.56cms (14) FHD (1920 x 1080), IPS</p>
-          <p><b>MRP :</b> 36,990</p>
+          <p><b>MRP :</b> ₹38,490</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-14ITL5/p/81X700DNIN"
+            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-14ITL5/p/81X700CWIN"
             class="btn"
             target="_blank"
             >Buy From Lenovo store</a
           >
         </div>
       </div>
+      <!------<div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Advantage</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Disadvantage</div>
+        </div>
+      </div>---->
     </div>
 
     <!-- -----single products details 3 ----- -->
@@ -290,7 +310,7 @@
           <p><b>RAM :</b> 8 GB, 1 x 8 GB, DDR4, 2666 MHz</p>
           <p><b>Storage :</b> 256 GB, M.2, PCIe NVMe, SSD</p>
           <p><b>Display :</b> 15.6", FHD 1920x1080</p>
-          <p><b>MRP :</b> 41,989</p>
+          <p><b>MRP :</b> ₹41,989</p>
           <a
             href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/vostro-3510-laptop/spd/vostro-15-3510-laptop/bts-icc-d585047win8"
             class="btn"
@@ -299,6 +319,16 @@
           >
         </div>
       </div>
+      <!----<div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Advantage</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Disadvantage</div>
+        </div>
+      </div>----->
     </div>
     <!-- -----single products details 3 ----- -->
 
