--- a/budget_friendly_mobiles.html
+++ b/budget_friendly_mobiles.html
@@ -93,7 +93,7 @@
             target="_blank"
             ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
           /></a>
-          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+          <a href="https://www.instagram.com/suggestmee_/" target="_blank"
             ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
           /></a>
           <a href="mailto:suggestme60@gmail.com?" target="_blank"
@@ -163,12 +163,12 @@
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> Snapdragon 778G 5G</p>
-          <p><b>Camera</b> 48MP AI Triple Camera</p>
+          <p><b>Camera :</b> 48MP AI Triple Camera</p>
           <p><b>Battery :</b> Massive 5000mAh Battery</p>
           <p><b>Display :</b> 144Hz Gaming Screen</p>
           <p><b>Storage :</b> 128GB</p>
           <p><b>RAM :</b> 6GB / 8GB</p>
-          <p><b>MRP :</b> 20000</p>
+          <p><b>MRP :</b> ₹20,000</p>
 
           <a
             href="https://buy.realme.com/in/goods/527"
@@ -176,6 +176,16 @@
             target="_blank"
             >Buy From Realme Store</a
           >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">LCD Display</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Best Battery Life</div>
         </div>
       </div>
     </div>
@@ -230,18 +240,28 @@
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> Snapdragon 778G 5G</p>
-          <p><b>Camera</b> 64MP triple camera</p>
+          <p><b>Camera :</b> 64MP triple camera</p>
           <p><b>Battery :</b> 5000mAh Battery</p>
           <p><b>Display :</b> 120Hz FHD + sAMOLED</p>
           <p><b>Storage :</b> 128GB</p>
           <p><b>RAM :</b> 6GB / 8GB</p>
-          <p><b>MRP :</b> 23,999</p>
+          <p><b>MRP :</b> ₹23,999</p>
           <a
             href="https://www.samsung.com/in/smartphones/galaxy-m/galaxy-m52-5g-light-blue-128gb-storage-6gb-ram-sm-m526blbhinu/buy/"
             class="btn"
             target="_blank"
             >Buy From Samsung Store</a
           >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">Plastic Back</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Powerful Processor</div>
         </div>
       </div>
     </div>
