--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -80,7 +80,7 @@
             target="_blank"
             ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
           /></a>
-          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+          <a href="https://www.instagram.com/suggestmee_/" target="_blank"
             ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
           /></a>
           <a href="mailto:suggestme60@gmail.com?" target="_blank"
@@ -157,7 +157,7 @@
             <p><b>RAM :</b> 16 GB SO-DIMM DDR4 3200MHz</p>  
             <p><b>Storage :</b> 512 GB M.2 2280 SSD</p> 
             <p><b>Display :</b> 39.62cms (15.6) FHD (1920 x 1080), IPS</p> 
-            <p><b>MRP :</b> 80,040</p> 
+            <p><b>MRP :</b> ₹80,040</p> 
           </p>
           <a
             href="https://www.lenovo.com/in/en/laptops/ideapad/ideapad-gaming-laptops/Gaming-3-Gen-6-15-AMD/p/82K200X3IN" class="btn" target="_blank">Buy From Lenovo Store</a>
@@ -216,7 +216,7 @@
           <p><b>RAM :</b>16 GB of DDR4-3200 SDRAM Memory</p>
           <p><b>Storage :</b> 1TB NVMe PCIe Gen4x4 SSD.</p>
           <p><b>Display :</b> 15.6" FHD (1920x1080), IPS-Level 240Hz Thin Bezel</p>
-          <p><b>MRP :</b> 1,25,490</p>
+          <p><b>MRP :</b> ₹1,25,490</p>
           <a
             href="https://www.amazon.in/MSI-Leopard-i7-11800H-IPS-Level-11UE-604IN/dp/B09NNMYQ3F/ref=sr_1_9?crid=1DB4VIN3DZYN8&keywords=msi&qid=1650209179&sprefix=ms%2Caps%2C516&sr=8-9&th=1"
             class="btn" target="_blank"
@@ -277,7 +277,7 @@
           <p><b>RAM :</b> 8 GB + 8GB Soldered DDR4 3200MHz</p>
           <p><b>Storage :</b> 1 TB M.2 2280 SSD</p>
           <p><b>Display :</b> 39.62cms (15.6) WQHD (2560 x 1440), IPS</p>
-          <p><b>MRP :</b> 144,990</p>
+          <p><b>MRP :</b> ₹144,990</p>
           <a
             href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-7-series/Legion-S7-15ACH6/p/88GMY701595"
             class="btn"
