--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
                 target="_blank"
-               >FOLLOW</a
+                >FOLLOW</a
               >
             </li>
             <li>
@@ -90,7 +90,7 @@
             target="_blank"
             ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
           /></a>
-          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+          <a href="https://www.instagram.com/suggestmee_/" target="_blank"
             ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
           /></a>
           <a href="mailto:suggestme60@gmail.com?" target="_blank"
@@ -185,6 +185,40 @@
       </div>
     </section>
     <!-- Mobile section end -->
+
+    <!-- SmartWatch section starts -->
+    <section style="padding-top: 40px">
+      <div class="small-container">
+        <div style="margin-bottom: 20px">
+          <hr />
+          <h2 class="title">BEST SMARTWATCHES</h2>
+          <hr />
+        </div>
+
+        <div class="row home-screen-product-detail-highlighters">
+          <div class="col-4">
+            <a href="SmartWatch_under6.html">
+              <img src="./images/product-7.png" alt="" />
+              <h4>SmartWatch (under ₹6000)</h4>
+            </a>
+          </div>
+          <!----
+          <div class="col-4">
+            <a href="budget_friendly_mobiles.html">
+              <img src="./images/product-5.png" alt="" />
+              <h4>Budget Friendly Mobiles</h4>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="performance_mobiles.html">
+              <img src="./images/product-6.png" alt="" />
+              <h4>High Performance Mobiles</h4>
+            </a>
+          </div>---->
+        </div>
+      </div>
+    </section>
+    <!-- SmartWatch section end -->
 
     <!-- footer -->
     <footer>
