--- a/performance_mobiles.html
+++ b/performance_mobiles.html
@@ -93,7 +93,7 @@
             target="_blank"
             ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
           /></a>
-          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+          <a href="https://www.instagram.com/suggestmee_/" target="_blank"
             ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
           /></a>
           <a href="mailto:suggestme60@gmail.com?" target="_blank"
@@ -164,12 +164,12 @@
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> Snapdragon™ 8 Gen 1</p>
-          <p><b>Camera</b> 50MP + 50MP</p>
+          <p><b>Camera :</b> 50MP + 50MP</p>
           <p><b>Battery :</b> Massive 5000mAh Battery</p>
           <p><b>Display :</b> 2K Super Reality Display</p>
           <p><b>Storage :</b> 128GB / 256GB</p>
           <p><b>RAM :</b> 8GB / 12GB</p>
-          <p><b>MRP :</b> 49,999</p>
+          <p><b>MRP :</b> ₹49,999</p>
 
           <a
             href="https://buy.realme.com/in/goods/528"
@@ -177,6 +177,16 @@
             target="_blank"
             >Buy From Realme Store</a
           >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">No IP rating</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">Flagship performance</div>
         </div>
       </div>
     </div>
@@ -230,12 +240,12 @@
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> Octa-Core</p>
-          <p><b>Camera</b> 12 MP + 12 MP + 8 MP</p>
+          <p><b>Camera :</b> 12 MP + 12 MP + 8 MP</p>
           <p><b>Battery :</b> 4500mAh Battery</p>
           <p><b>Display :</b> Dynamic AMOLED 2X</p>
           <p><b>Storage :</b> 256GB</p>
           <p><b>RAM :</b> 8GB</p>
-          <p><b>MRP :</b> 54,999</p>
+          <p><b>MRP :</b> ₹54,999</p>
 
           <a
             href="https://www.samsung.com/in/smartphones/galaxy-s21-5g/galaxy-s21-fe-5g/buy/"
@@ -243,6 +253,16 @@
             target="_blank"
             >Buy From Samsung Store</a
           >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="red dot"></div>
+          <div class="pros-con-content">No 3.5mm Headphone Jack</div>
+        </div>
+        <div class="col-2">
+          <div class="green dot"></div>
+          <div class="pros-con-content">IP68 water resistance</div>
         </div>
       </div>
     </div>
