--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -93,7 +93,7 @@
             target="_blank"
             ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
           /></a>
-          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+          <a href="https://www.instagram.com/suggestmee_/" target="_blank"
             ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
           /></a>
           <a href="mailto:suggestme60@gmail.com?" target="_blank"
@@ -159,12 +159,12 @@
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> 11th Gen Intel® Core™ i5-11320H</p>
-          <p><b>Operating System</b> Windows 11 Home</p>
+          <p><b>Operating System :</b> Windows 11 Home</p>
           <p><b>graphics :</b> Intel® Iris® Xe Graphics</p>
           <p><b>RAM :</b> 16 GB, 2 x 8 GB, DDR4, 3200 MHz</p>
           <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
           <p><b>Display :</b> 15.6", FHD (1920x1080)</p>
-          <p><b>MRP :</b> 68,989</p>
+          <p><b>MRP :</b> ₹68,989</p>
 
           <a
             href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-15-laptop/spd/inspiron-15-5510-laptop/bts-icc-c783511win8"
@@ -228,7 +228,7 @@
           <p><b>RAM :</b> 16 GB Soldered DDR4 3200MHz</p>
           <p><b>Storage :</b> 512 GB M.2 2280 SSD</p>
           <p><b>Display :</b> 39.62cms (15.6),FHD (1920x1080),IPS</p>
-          <p><b>MRP :</b> 63,990</p>
+          <p><b>MRP :</b> ₹63,990</p>
           <a
             href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
             class="btn"
@@ -288,7 +288,7 @@
           <p><b>RAM :</b> 16 GB DDR4-3200 MHz RAM (onboard)</p>
           <p><b>Storage : </b> 512 GB PCIe® NVMe™ M.2 SSD</p>
           <p><b>Display :</b> 13.3 , WUXGA (1920 x 1200), IPS</p>
-          <p><b>MRP :</b>69,999</p>
+          <p><b>MRP :</b> ₹69,999</p>
 
           <a
             href="https://www.hp.com/in-en/shop/hp-pavilion-aero-laptop-13-be0206au-50n43pa.html"
