--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -58,13 +58,9 @@
         <nav class="suggestme-nav">
           <ul id="menuItems">
             <li><a href="/">HOME</a></li>
-            <!--<li>
-              <a
-                href="https://www.facebook.com/SuggestMee-106460971998723/"
-                target="_blank"
-                >ABOUT</a
-              >
-            </li>--->
+            <li>
+              <a href="about.html" target="_blank">ABOUT</a>
+            </li>
             <li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
