--- a/about.html
+++ b/about.html
@@ -56,11 +56,7 @@
           <ul id="menuItems">
             <li><a href="/">HOME</a></li>
             <li>
-              <a
-                href="https://www.facebook.com/SuggestMee-106460971998723/"
-                target="_blank"
-                >ABOUT</a
-              >
+              <a href="about.html">ABOUT</a>
             </li>
             <li>
               <a
@@ -108,117 +104,38 @@
         </div>
 
         <hr style="margin: 30px 0" />
-
-        <div class="container home-page-image-container">
-          <div class="row">
-            <div class="home-page-text-container">
-              <p>A SELECTION OF THE BEST</p>
-              <h1>LAPTOP JUST FOR YOU</h1>
-            </div>
-          </div>
-        </div>
       </div>
     </header>
 
     <!-- Laptop section starts -->
-    <section style="padding-top: 40px">
+    <section
+      style="
+        text-align: center;
+        min-height: calc(100vh - 417px);
+        padding-bottom: 30px;
+      "
+    >
       <div class="small-container">
-        <div style="margin-bottom: 20px">
-          <hr />
-          <h2 class="title">BEST LAPTOPS</h2>
-          <hr />
-        </div>
-
-        <div class="row home-screen-product-detail-highlighters">
-          <div class="col-4">
-            <a href="basic_use_laptops.html">
-              <img src="./images/product-1.jpg" alt="" />
-              <h4>Basic Use Laptops</h4>
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="programming_laptops.html">
-              <img src="./images/product-2.png" alt="" />
-              <h4>Programming Laptops</h4>
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="gamming_laptops.html">
-              <img src="./images/product-3.png" alt="" />
-              <h4>Gaming Laptops</h4>
-            </a>
-          </div>
-        </div>
+        <h1
+          style="
+            font-size: 50px;
+            font-weight: 300;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+          "
+        >
+          Our Mission
+        </h1>
+        <p style="font-weight: 18px; text-align: justify">
+          Our team of Engineers are knowledgeable and have the skills to help
+          you find the perfect product for your needs. We can find any item,
+          whether it is in-stock or not, and have it shipped to you. We are
+          committed to the customer experience and will do whatever it takes to
+          help you find the right product.
+        </p>
       </div>
     </section>
     <!-- Laptop section ends -->
-
-    <!-- Mobile section starts -->
-    <section style="padding-top: 40px">
-      <div class="small-container">
-        <div style="margin-bottom: 20px">
-          <hr />
-          <h2 class="title">BEST MOBILES</h2>
-          <hr />
-        </div>
-
-        <div class="row home-screen-product-detail-highlighters">
-          <!----<div class="col-4">
-            <a href="feature_mobiles.html">
-              <img src="./images/product-4.png" alt="" />
-              <h4>Featured Mobiles</h4>
-            </a>
-          </div>---->
-          <div class="col-4">
-            <a href="budget_friendly_mobiles.html">
-              <img src="./images/product-5.png" alt="" />
-              <h4>Budget Friendly Mobiles</h4>
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="performance_mobiles.html">
-              <img src="./images/product-6.png" alt="" />
-              <h4>High Performance Mobiles</h4>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Mobile section end -->
-
-    <!-- SmartWatch section starts -->
-    <section style="padding-top: 40px">
-      <div class="small-container">
-        <div style="margin-bottom: 20px">
-          <hr />
-          <h2 class="title">BEST SMARTWATCHES</h2>
-          <hr />
-        </div>
-
-        <div class="row home-screen-product-detail-highlighters">
-          <div class="col-4">
-            <a href="SmartWatch_under6.html">
-              <img src="./images/product-7.png" alt="" />
-              <h4>SmartWatch (under ₹6000)</h4>
-            </a>
-          </div>
-          <!----
-          <div class="col-4">
-            <a href="budget_friendly_mobiles.html">
-              <img src="./images/product-5.png" alt="" />
-              <h4>Budget Friendly Mobiles</h4>
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="performance_mobiles.html">
-              <img src="./images/product-6.png" alt="" />
-              <h4>High Performance Mobiles</h4>
-            </a>
-          </div>---->
-        </div>
-      </div>
-    </section>
-    <!-- SmartWatch section end -->
 
     <!-- footer -->
     <footer>
