--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -46,9 +46,8 @@
           <ul id="menuItems">
             <li><a href="/">HOME</a></li>
             <li>
-              <a href="about.html" target="_blank">ABOUT</a>
+              <a href="about.html">ABOUT</a>
             </li>
-            
             <li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
