--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <ul id="menuItems">
             <li><a href="/">HOME</a></li>
             <li>
-              <a href="about.html" target="_blank">ABOUT</a>
+              <a href="about.html">ABOUT</a>
             </li>
             <li>
               <a
