--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -57,13 +57,9 @@
         <nav class="suggestme-nav">
           <ul id="menuItems">
             <li><a href="/">HOME</a></li>
-            <!---<li>
-              <a
-                href="https://www.facebook.com/SuggestMee-106460971998723/"
-                target="_blank"
-                >ABOUT</a
-              >
-            </li>--->
+            <li>
+              <a href="about.html">ABOUT</a>
+            </li>
             <li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
