about us page redesign

--- a/about.html
+++ b/about.html
@@ -108,31 +108,44 @@
     </header>
 
     <!-- Laptop section starts -->
-    <section
-      style="
-        text-align: center;
-        min-height: calc(100vh - 417px);
-        padding-bottom: 30px;
-      "
-    >
-      <div class="small-container">
-        <h1
-          style="
-            font-size: 50px;
-            font-weight: 300;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-          "
-        >
-          Our Mission
-        </h1>
-        <p style="font-weight: 18px; text-align: justify">
-          Our team of Engineers are knowledgeable and have the skills to help
-          you find the perfect product for your needs. We can find any item,
-          whether it is in-stock or not, and have it shipped to you. We are
-          committed to the customer experience and will do whatever it takes to
-          help you find the right product.
+    <section style="text-align: center; min-height: calc(100vh - 417px)">
+      <div>
+        <p class="about-section-title">
+          We are committed to the customer experience and will do whatever it
+          takes to help you find the right product.
         </p>
+      </div>
+      <div class="about-section-description-container">
+        <div class="about-section-description-img"></div>
+        <div class="about-section-description-text">
+          <h1
+            style="
+              font-size: 50px;
+              font-weight: 300;
+              text-transform: uppercase;
+              letter-spacing: 5px;
+            "
+          >
+            what we do
+          </h1>
+          <span>
+            Every time, we spend days or sometimes weeks in researching
+            products, analysis, reading consumer feedback, testing products. to
+            assist you in finding the perfect fit for your needs. Our goal is to
+            make your shopping experience simple and enjoyable, and allow you to
+            save time and money. All the products are hand-picked and researched
+            or tested by us!
+          </span>
+          <span style="margin-top: 20px; display: inline-block">
+            We've spent years researching and evaluating devices, and we're
+            always on the lookout for new laptop releases that could challenge
+            one of our favourites. We're always evaluating specifications and
+            putting products through rigorous testing to determine which ones
+            are worth purchasing. <br />
+            <br />
+            Happy Shopping!
+          </span>
+        </div>
       </div>
     </section>
     <!-- Laptop section ends -->
